--- a/src/main/resources/templates/beneficiary_form.html
+++ b/src/main/resources/templates/beneficiary_form.html
@@ -1,16 +1,195 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
     <head>
-        <title>TODO supply a title</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    </head>
-    <body>
-        <div>TODO write content</div>
-    </body>
+    <nav class="navbar navbar-expand-lg navbar-dark" id="navbar" aria-label="Offcanvas navbar large">
+        <div class="container-fluid" id="navbar">
+            <a class="navbar-brand" id="tit-navbar" href="#"> Solaridad compartida</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                    data-bs-target="#offcanvasNavbar2" aria-controls="offcanvasNavbar2">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasNavbar2"
+                 aria-labelledby="offcanvasNavbar2Label">
+                <div class="offcanvas-header">
+                    <h5 class="offcanvas-title" id="offcanvasNavbar2Label">Offcanvas</h5>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
+                            aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                    <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Iniciar sesion</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#">Registrarse</a>
+                        </li>
+
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </nav>
+
+</head>
+<body>
+
+    <header>
+        <title>FORMULARIO de REGISTRO</title>
+        <div class="container">
+            <div class="abs-center">
+                <a class="navbar-brand" href="#">
+                    <img src="" alt="" width="30" height="24" class="d-inline-block align-text-top">
+                    BENEFICIARIO
+                </a>
+
+                <form th:action ="@{/form}" method="POST"
+                      class="border p-3 form" enctype="multipart/form-data" > 
+
+                    <div class="form-group">
+                        <h1> REGISTRAR BENEFICIARIO </h1>
+
+                        <div class="form-group my-3">
+                            <label for="text">Nombre de usuario</label>
+                            <input type="text" class="form-control" name="username" placeholder="Nombre de usuario" th:value="${username}">
+                        </div> 
+                        <div class="form-group my-3">
+                            <label for="text">Nombre de institución</label>
+                            <input type="text" class="form-control" name="name" placeholder="Nombre" th:value="${name}">
+                        </div> 
+                        
+                        <div class="form-group my-3">
+                            <label for="text">Tipo de institución</label>
+                            <input type="text" class="form-control" name="institution_type" placeholder="Nombre de la institución" th:value="${institution_type}">
+                        </div> 
+                        
+                        <div class="form-group my-3">
+                            <label for="text">Email</label>
+                            <input type="email" class="form-control" name="email" placeholder="email" th:value="${email}">
+                        </div> 
+                        
+                        <div class="form-group my-3">
+                            <label for="text">Contraseña</label>
+                            <input type="password"class="form-control" name="password" placeholder="contraseña" th:value="${password}">
+                        </div> 
+                        
+                        
+                        <div class="form-group my-3">
+                            <label for="text">Repetir contraseña</label>
+                            <input type="password"class="form-control" name="password2" placeholder="repetir contraseña" th:value="${password2}">
+                        </div> 
+                         
+
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="1" id="voluntary">
+                            <label class="form-check-label" for="voluntary">
+                                ¿Es usted voluntario?
+                            </label>                           
+                        </div>
+
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="2" id="toys">
+                            <label class="form-check-label" for="toys">
+                                Juguetes
+                            </label>                               
+                        </div>
+
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="3" id="clothing">
+                            <label class="form-check-label" for="clothing">
+                                Prendas de vestir
+                            </label>                              
+                        </div>
+                        
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="4" id="food">
+                            <label class="form-check-label" for="food">
+                                Alimentos
+                            </label>                               
+                        </div>
+                        
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="5" id="monetary_aid">
+                            <label class="form-check-label" for="monetary_aid">
+                                Ayuda aconomica
+                            </label>                               
+                        </div>
+                        
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="6" id="school_supplies">
+                            <label class="form-check-label" for="school_supplies">
+                                Útiles escolares
+                            </label>                               
+                        </div>
+                        
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="7" id="books">
+                            <label class="form-check-label" for="books">
+                                Libros
+                            </label>                               
+                        </div>
+                        
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="8" id="medical_supplies">
+                            <label class="form-check-label" for="medical_supplies">
+                                Medicamentos
+                            </label>                               
+                        </div>
+                        
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="9" id="furnitures">
+                            <label class="form-check-label" for="furnitures">
+                                Muebles
+                            </label>                               
+                        </div>
+                        
+                        <div class="form-check">
+                            <input class="form-check-input" type="checkbox" value="10" id="legacies">
+                            <label class="form-check-label" for="legacies">
+                                Legado
+                            </label>                               
+                        </div>
+
+
+                   
+                    <button type="submit" class="btn btn-primary"> Registrame </button>
+                </form>
+                
+                <div th:if="${error != null}" class="card text-white bg-danger mb-3 mensajeError" >
+                    <div class="card-body">
+                        <h5 class="card-title">Error</h5>
+                        <p class="card-text" th:text="${error}"></p>
+                    </div>
+                    </div>
+
+                    <div th:if="${sucess != null}" class="card text-white bg-success mt-3 mensajeExito" >
+                        <div class="card-body">
+                            <h5 class="card-title">sucess</h5>
+                            <p class="card-text" th:text="${sucess}"></p>
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+        </div>
+
+    </header>
+    <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top" id="footer">
+        <div class="col-md-4 d-flex align-items-center">
+            <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+                <svg class="bi" width="30" height="24">
+                <use xlink:href="#bootstrap" />
+                </svg>
+            </a>
+            <span class="mb-3 mb-md-0 text-muted">&copy; 2022 Company, Inc</span>
+        </div>
+
+
+    </footer>
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
+   
+</body>
 </html>
