--- a/src/main/resources/templates/beneficiary_form.html
+++ b/src/main/resources/templates/beneficiary_form.html
@@ -161,10 +161,10 @@
                     </div>
                     </div>
 
-                    <div th:if="${sucess != null}" class="card text-white bg-success mt-3 mensajeExito" >
+                    <div th:if="${success != null}" class="card text-white bg-success mt-3 mensajeExito" >
                         <div class="card-body">
-                            <h5 class="card-title">sucess</h5>
-                            <p class="card-text" th:text="${sucess}"></p>
+                            <h5 class="card-title">success</h5>
+                            <p class="card-text" th:text="${success}"></p>
                         </div>
 
                     </div>
