--- a/src/main/resources/templates/login_form.html
+++ b/src/main/resources/templates/login_form.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LOGIN</title>
     
-    <link rel="stylesheet" type="text/css" href="../static/style_login_css.css">
+    <link rel="stylesheet" type="text/css" th:href="@{/style_login_css.css}">
     <!-- <link rel="stylesheet" href="style.css"> -->
     <!-- CSS only -->
     <!-- CSS only -->
@@ -28,28 +28,29 @@
                                 <div class="card-body p-md-5 mx-md-4">
 
                                     <div class="text-center">
-                                        <img src="../front/img-login/IMG-20221004-WA0086.jpg"
+                                        <img th:src="@{/images/register_logo_1.jpg}"
                                             style="width: 185px;" alt="logo">
                                         <h4 class="mt-1 mb-5 pb-1">Solidaridad Compartida</h4>
                                     </div>
 
-                                    <form>
+                                    <form th:action ="@{/login/form}" method="POST"
+                                        class="border p-3 form" enctype="multipart/form-data">
                                         <p>Por favor, ingrese a su cuenta</p>
 
                                         <div class="form-outline mb-4">
-                                            <input type="username" id="form2Example11" class="form-control"
+                                            <input type="username" id="form2Example11" class="form-control" name="username" th:value="${username}"
                                                 placeholder="" />
                                             <label class="form-label" for="form2Example11">Nombre de usuario</label>
                                         </div>
 
                                         <div class="form-outline mb-4">
-                                            <input type="password" id="form2Example22" class="form-control" />
+                                            <input type="password" id="form2Example22" class="form-control" name="password" th:value="${password}"/>
                                             <label class="form-label" for="form2Example22">Contraseña</label>
                                         </div>
 
                                         <div class="text-center pt-1 mb-5 pb-1">
                                             <button class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3"
-                                                type="button">LOGIN</button>
+                                                type="submit">LOGIN</button>
                                            <!-- <a class="text-muted" href="#!">Forgot password?</a>-->
                                         </div>
 
