--- a/src/main/resources/static/style_login_css.css
+++ b/src/main/resources/static/style_login_css.css
@@ -22,5 +22,104 @@
         border-top-right-radius: .3rem;
         border-bottom-right-radius: .3rem;
     }
+    
+    
+    .body{
+    background-color: #FBEEEC ;
+}
+
+#navbar{
+
+  background-color: #FB6754  ;
+}
+
+.sticky-topbar {
+    width: 100%;
+  }
+
+
+  .blocks{
+    text-align: center;
+    background: #FC8A70 ;  /* #FC8A70  #FB4666 */
+    transition: 2s;
+    background-size: cover;
+    position: relative;
+    overflow: visible;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-justify-content: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    height: 300px;
+    block-size: border-box;
+    border: 2px solid black;
+    border-radius: 10px;
+    margin: 2px 2px;
+  }
+  .blocks:hover{
+    background-color:#FB0707 ;
+  }
+
+  .subnav-hero-section .subnav-hero-headline {
+    color: #fefefe;
+  }
+
+  .subnav-hero-subnav {
+    float: none;
+    position: absolute;
+    text-align: center;
+    margin: 0 auto;
+    bottom: 0;
+    width: 100%;
+  }
+
+  .subnav-hero-subnav li {
+    float: none;
+    display: inline-block;
+  }
+
+  .subnav-hero-subnav li a {
+    padding: 0.9rem 1rem;
+    font-size: 0.75rem;
+    color: #fefefe;
+    text-transform: uppercase;
+    display: block;
+    font-weight: bold;
+    letter-spacing: 1px;
+    transition: all 0.35s ease-in-out;
+  }
+
+  .subnav-hero-subnav li a.is-active {
+    background: rgba(254, 254, 254, 0.15);
+  }
+
+  .subnav-hero-subnav li a:hover {
+    background: rgba(6, 116, 195, 0.15);
+  }
+  .op:hover{
+    background-color: black;
+  }
+
+ .card:hover{
+    font-size: 20px;
+    border-color: #FC8A70;
+
+
+ }
+ #offcanvasNavbar2{
+    background-color: aqua;
+ }
+ 
+ 
+ 
+  #footer{
+    background-color: black;
+    display: block;
+  }
+
 }
 
