--- a/src/main/resources/templates/beneficiary_form.html
+++ b/src/main/resources/templates/beneficiary_form.html
@@ -31,10 +31,42 @@
     </nav>
 
 </head>
+
 <body>
 
     <header>
+        
+        <nav class="navbar navbar-expand-lg navbar-dark" id="navbar" aria-label="Offcanvas navbar large">
+        <div class="container-fluid" id="navbar">
+            <a class="navbar-brand" id="tit-navbar" href="#"> Solaridad compartida</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                    data-bs-target="#offcanvasNavbar2" aria-controls="offcanvasNavbar2">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasNavbar2"
+                 aria-labelledby="offcanvasNavbar2Label">
+                <div class="offcanvas-header">
+                    <h5 class="offcanvas-title" id="offcanvasNavbar2Label">Offcanvas</h5>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
+                            aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                    <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Iniciar sesion</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#">Registrarse</a>
+                        </li>
+
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </nav>
+        
         <title>FORMULARIO de REGISTRO</title>
+        
         <div class="container">
             <div class="abs-center">
                 <a class="navbar-brand" href="#">
@@ -84,7 +116,7 @@
                         <div class="form-check">
                             <input class="form-check-input" type="checkbox" name="voluntary" value="1" id="voluntary">
                             <label class="form-check-label" for="voluntary">
-                                ¿Es usted voluntario?
+                                Voluntarios
                             </label>                           
                         </div>
 
@@ -189,9 +221,14 @@
 
 
     </footer>
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
-        crossorigin="anonymous"></script>
+    
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-
+            DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-
+            ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
+    crossorigin="anonymous"></script>
    
 </body>
 </html>
