started adding user roles

--- a/src/main/resources/templates/beneficiary_form.html
+++ b/src/main/resources/templates/beneficiary_form.html
@@ -36,7 +36,7 @@
 
     <header>
         
-        <nav class="navbar navbar-expand-lg navbar-dark" id="navbar" aria-label="Offcanvas navbar large">
+          <nav class="navbar navbar-expand-lg navbar-dark" id="navbar" aria-label="Offcanvas navbar large">
         <div class="container-fluid" id="navbar">
             <a class="navbar-brand" id="tit-navbar" href="#"> Solaridad compartida</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
@@ -95,6 +95,13 @@
                             <label for="text">Tipo de institución</label>
                             <input type="text" class="form-control" name="institution_type" placeholder="Nombre de la institución" th:value="${institution_type}">
                         </div> 
+                        
+                        
+                        <div class="form-group my-3">
+                            <select name="">
+                            <option>
+                        </div> 
+                        
                         
                         <div class="form-group my-3">
                             <label for="text">Email</label>
