Added Spring Security and user roles

--- a/src/main/resources/templates/login_form.html
+++ b/src/main/resources/templates/login_form.html
@@ -38,9 +38,9 @@
                                         <p>Por favor, ingrese a su cuenta</p>
 
                                         <div class="form-outline mb-4">
-                                            <input type="username" id="form2Example11" class="form-control" name="username" th:value="${username}"
+                                            <input type="email" id="form2Example11" class="form-control" name="email" th:value="${email}"
                                                 placeholder="" />
-                                            <label class="form-label" for="form2Example11">Nombre de usuario</label>
+                                            <label class="form-label" for="form2Example11">Email</label>
                                         </div>
 
                                         <div class="form-outline mb-4">
