--- a/src/main/resources/templates/donor_form.html
+++ b/src/main/resources/templates/donor_form.html
@@ -1,16 +1,145 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
+
     <head>
-        <title>TODO supply a title</title>
         <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+        <link rel="stylesheet" th:href="@{/style_login_css.css}">
+        <link rel="shortcut icon" href="favicon.png">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+              integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     </head>
-    <body>
-        <div>TODO write content</div>
+
+    <body class="body">
+
+        <header>
+
+            <nav class="navbar navbar-expand-lg" id="navbar" aria-label="Offcanvas navbar large">
+                <div class="container-fluid" id="navbar">
+                    <a class="navbar-brand" id="titNavbar" href="#"> SOLARIDAD COMPARTIDA</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                            data-bs-target="#offcanvasNavbar2" aria-controls="offcanvasNavbar2">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasNavbar2"
+                         aria-labelledby="offcanvasNavbar2Label">
+                        <div class="offcanvas-header">
+                            <h5 class="offcanvas-title" id="offcanvasNavbar2Label">Offcanvas</h5>
+                            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
+                                    aria-label="Close"></button>
+                        </div>
+                        <div class="offcanvas-body">
+                            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page" href="#">Iniciar sesion</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link active" href="#">Registrarse</a>
+                                </li>
+
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+
+        </header>
+
+        <main class="mainFormDonnor">
+
+            <div class="form-group" id="formDonnor">
+                <h3 class="titRegistrer">REGISTRAR DONADOR</h3>
+
+                <form th:action="@{/donor/form}" method="POST" class="border p-3 form" enctype="multipart/form-data" >
+                     
+                    <div class="form-group my-3">
+                        <label for="text" class="labelForm">Nombre completo</label>
+                        <input type="text" class="form-control" name="name" placeholder="Nombre completo"
+                               th:value="${name}">
+                    </div>
+                    
+                     <div class="form-group my-3">
+                        <label for="text" class="labelForm">Tipo de Donador</label>
+                        <input type="donor_type" class="form-control" name="donor_type" placeholder="donor_type" th:value="${donor_type}">
+                    </div>
+                    
+                    
+                    <div class="form-group my-3">
+                        <label for="text" class="labelForm">Email</label>
+                        <input type="email" class="form-control" name="email" placeholder="Email" th:value="${email}">
+                    </div>
+
+                    <div class="form-group my-3">
+                        <label for="text" class="labelForm">Contraseña</label>
+                        <input type="password" class="form-control" name="password" placeholder="Contraseña"
+                               th:value="${password}">
+                    </div>
+
+
+                    <div class="form-group my-3">
+                        <label for="text" class="labelForm">Repetir contraseña</label>
+                        <input type="password" class="form-control" name="password2" placeholder="Repetir contraseña"
+                               th:value="${password2}">
+                    </div>
+                    
+                     <div class="form-check">
+                            <input class="form-check-input" type="checkbox" name="voluntary" value="1" id="voluntary">
+                            <label class="form-check-label" for="voluntary">
+                                Quiere recibir notificaciones acerca de trabajo voluntario?
+                            </label>                           
+                        </div>
+
+                    <button type="submit" class="btn btn-primary" id="buttonRegis"> Registrame </button>
+
+                </form>
+
+            </div>
+
+            <div class="infoDonnor">
+
+
+                <h5 class="titInfo">Gracias por tu granito de arena</h5>
+
+                <p class="infoText">Agradecemos tu interes por querer contribuir a mejorar las condiciones de los sectores
+                    mas vulnerables.
+                </p>
+
+                <p class="infoText">Juntos podremos hacer de este un mundo mejor!</p>
+
+                <button type="submit" class="btn btn-primary" id="buttonInfo">Mas info </button>
+
+
+
+
+
+            </div>
+
+
+
+        </main>
+
+        <footer class="footer">
+            <div>
+
+                <p class="textFooter">&copy; 2022 Solaridad compartida. </p>
+
+
+            </div>
+
+
+        </footer>
+
+
+
+
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
+
+
     </body>
+
 </html>
