--- a/src/main/resources/static/style_login_css.css
+++ b/src/main/resources/static/style_login_css.css
@@ -192,7 +192,7 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column; 
+ /* flex-direction: column; */
 }
 
 .mainFormDonnor {
