--- a/src/main/resources/templates/beneficiary_form.html
+++ b/src/main/resources/templates/beneficiary_form.html
@@ -18,26 +18,25 @@
 
         <nav class="navbar navbar-expand-lg" id="navbar" aria-label="Offcanvas navbar large">
             <div class="container-fluid" id="navbar">
-                <a class="navbar-brand" id="titNavbar" href="#"> Solaridad compartida</a>
+                <a class="navbar-brand" id="titNavbar" th:href="@{/}"> Solaridad compartida</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasNavbar2" aria-controls="offcanvasNavbar2">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasNavbar2"
                     aria-labelledby="offcanvasNavbar2Label">
-                    <div class="offcanvas-header">
+                   <!--  <div class="offcanvas-header">
                         <h5 class="offcanvas-title" id="offcanvasNavbar2Label">Offcanvas</h5>
                         <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
-                            aria-label="Close"></button>
-                    </div>
+                            aria-label="Close"></button> 
+                    </div>-->
+                   
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Iniciar sesion</a>
+                                <a class="nav-link active" aria-current="page" th:href="@{/login/}">Iniciar sesion</a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link active" href="#">Registrarse</a>
-                            </li>
+                           
 
                         </ul>
                     </div>
@@ -51,10 +50,10 @@
 
         <div class="container">
             <div class="abs-center">
-                <a class="navbar-brand" href="#">
+              <!--   <a class="navbar-brand" href="#">
                     <img src="" alt="" width="30" height="24" class="d-inline-block align-text-top">
                     BENEFICIARIO
-                </a>
+                </a> -->
 
                 <form th:action="@{/beneficiary/form}" method="POST" class="border p-3 form"
                     enctype="multipart/form-data" >
