--- a/src/main/resources/templates/login_form.html
+++ b/src/main/resources/templates/login_form.html
@@ -17,6 +17,38 @@
 
 </head>
 
+       <header>
+
+            <nav class="navbar navbar-expand-lg" id="navbar" aria-label="Offcanvas navbar large">
+                <div class="container-fluid" id="navbar">
+                    <a class="navbar-brand" id="titNavbar" th:href="@{/}"> Solidaridad Compartida</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                            data-bs-target="#offcanvasNavbar2" aria-controls="offcanvasNavbar2">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <!--<div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasNavbar2"
+                         aria-labelledby="offcanvasNavbar2Label">
+                        <div class="offcanvas-header">
+                            <h5 class="offcanvas-title" id="offcanvasNavbar2Label">Offcanvas</h5>
+                            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
+                                    aria-label="Close"></button>
+                        </div>
+                        <div class="offcanvas-body">
+                            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page" th:href="@{/login/}">Iniciar sesion</a>
+                                </li>
+                               
+
+                            </ul>
+                        </div>
+                    </div> -->
+                </div>
+            </nav>
+
+        </header>
+
+
 <body>
     <section class="h-100 gradient-form" style="background-color: #eee;">
         <div class="container py-5 h-100">
