--- a/src/main/resources/templates/index_D.html
+++ b/src/main/resources/templates/index_D.html
@@ -1,16 +1,229 @@
 <!DOCTYPE html>
-<!--
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
--->
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
+
     <head>
-        <title>TODO supply a title</title>
         <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Document</title>
+         <link rel="stylesheet" th:href="@{/style_login_css.css}">
+        <link href="style.css" rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+              integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     </head>
-    <body>
-        <div>TODO write content D</div>
+
+    <body class="body">
+
+        <header>
+
+
+            <nav class="navbar navbar-expand-lg navbar-dark" id="navbar" aria-label="Offcanvas navbar large">
+                <div class="container-fluid" id="navbar">
+                    <a class="navbar-brand" id="tit-navbar" href="#"> Solaridad compartida</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                            data-bs-target="#offcanvasNavbar2" aria-controls="offcanvasNavbar2">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasNavbar2"
+                         aria-labelledby="offcanvasNavbar2Label">
+                        <div class="offcanvas-header">
+                            <h5 class="offcanvas-title" id="offcanvasNavbar2Label">Offcanvas</h5>
+                            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
+                                    aria-label="Close"></button>
+                        </div>
+                        <div class="offcanvas-body">
+                            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                                <a th:action="@{/donor/update/form}" class="link" id="textRoute">Perfil</a>
+                                <a th:href="@{/logout}" class="link" id="textRoute">Cerrar Sesion</a>
+
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+
+
+
+
+
+
+
+
+
+
+            <div class="blocks">
+                <h1 class="subnav-hero-headline" id="titleForDonnor">GRACIAS</h1>
+                <p></p>
+      
+                <h5>Por ayudar a los mas necesitados</h5>
+                <ul class="subnav-hero-subnav">
+                    <li><a href="#" class="op">Beneficiario!</a></li>
+                    <li><a href="#" class="op">Donante!</a></li>
+                    <li><a target="_blank" href="https://zurb.com/responsive" class="op">Just do it!</a></li>
+                </ul>
+            </div>
+        </header>
+
+        <main class="container py-5" id="containerDonnor">
+
+            <div class="containerCards">
+
+                <div class="card mb-3" style="max-width: 540px;" id="cardDonnor">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img th:src="@{/images/muebles.png}"  class="img-fluid rounded-start"
+                                 alt="...">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">DONA MUEBLES</h5>
+                                <p class="card-text">En esta seccion encontraras todas las instituciones y/o beneficiencias
+                                    que necesiten muebles para sus espacios.</p>
+                                <a class="btn btn-primary" id="buttonInfoCard" href="formDonnor.html"> Conoce mas</a>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card mb-3" style="max-width: 540px; margin-top: 3px;">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img th:src="@{/images/Alimentos.png}" class="img-fluid rounded-start">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">DONA ALIMENTOS</h5>
+                                <p class="card-text">En esta seccion encontraras todas las instituciones y/o beneficiencias
+                                    que necesiten Alimentos.</p>
+                                <a class="btn btn-primary" id="buttonInfoCard" href="formDonnor.html"> Conoce mas</a>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card mb-3" style="max-width: 540px;" id="cardDonnor">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img th:src="@{/images/ayudaEconomica.png}" class="img-fluid rounded-start"
+                                 alt="...">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">DONA DINERO</h5>
+                                <p class="card-text">En esta seccion encontraras todas las instituciones y/o beneficiencias
+                                    que necesiten Alimentos.</p>
+                                <a class="btn btn-primary" id="buttonInfoCard" href="formDonnor.html"> Conoce mas</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card mb-3" style="max-width: 540px; padding-top: 6px; padding-bottom: 10px; margin-top: 17px;">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img th:src="@{/images/medicamentos.png}" class="img-fluid rounded-start"
+                                 alt="...">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">DONA MEDICAMENTOS</h5>
+                                <p class="card-text">En esta seccion encontraras todas las instituciones y/o beneficiencias
+                                    que necesiten Alimentos.</p>
+                                <a class="btn btn-primary" id="buttonInfoCard" href="formDonnor.html"> Conoce mas</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card mb-3" style="max-width: 540px;" id="cardDonnor">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img th:src="@{/images/indumentaria.png}" class="img-fluid rounded-start"
+                                 alt="...">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">DONA INDUMENTARIA</h5>
+                                <p class="card-text">En esta seccion encontraras todas las instituciones y/o beneficiencias
+                                    que necesiten indumentaria.</p>
+                                <a class="btn btn-primary" id="buttonInfoCard" href="formDonnor.html"> Conoce mas</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card mb-3" style="max-width: 540px; margin-top: 18px; padding-bottom: 3px;">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img th:src="@{/images/utilesyLibros.png}" class="img-fluid rounded-start"
+                                 alt="...">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">DONA UTILES ESCOLARES Y/0 LIBROS</h5>
+                                <p class="card-text">En esta seccion encontraras todas las instituciones y/o beneficiencias
+                                    que necesiten utiles escolares y/o libros.</p>
+                                <a class="btn btn-primary" id="buttonInfoCard" href="formDonnor.html"> Conoce mas</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card mb-3" style="max-width: 540px;" id="cardDonnor">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img th:src="@{/images/juguetes.png}" class="img-fluid rounded-start"
+                                 alt="...">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">DONA JUGUETES</h5>
+                                <p class="card-text">En esta seccion encontraras todas las instituciones y/o beneficiencias
+                                    que necesiten Alimentos..</p>
+                                <a class="btn btn-primary" id="buttonInfoCard" href="formDonnor.html"> Conoce mas</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card mb-3" style="max-width: 540px; margin-top: 19px; padding-top: 3px;" id="containerDonnorR">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <img th:src="@{/images/voluntarios.png}"class="img-fluid rounded-start" alt="...">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">POSTULATE COMO VOLUNTARIO</h5>
+                                <p class="card-text">En esta seccion encontraras todas las instituciones y/o beneficiencias
+                                    que necesiten Alimentos.</p>
+                                <a class="btn btn-primary" id="buttonInfoCard" href="formDonnor.html"> Conoce mas</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+        </main>
+
+        <footer class="footer" id="footerBeni">
+            <div>
+
+                <p class="textFooter">&copy; 2022 Solaridad compartida. </p>
+
+
+            </div>
+
+
+        </footer>
+
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
+
     </body>
+
 </html>
