--- a/src/main/resources/templates/panel.html
+++ b/src/main/resources/templates/panel.html
@@ -1,4 +1,98 @@
 <!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Solidaridad Compartida</title>
+        <link rel="stylesheet" th:href="@{/style_login_css.css}">
+        <link href="style.css" rel="stylesheet">
+
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+              integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+
+        <style>
+            .btn-a{background: linear-gradient(to right, #ee7724, #d8363a, #dd3675, #b44593);color: black;border: 0px;padding: 25px 40px;font-size: 25px;border-radius: 7px;}
+            .btn-a:hover{color: whitesmoke;}
+        </style>
+    </head>
+    <body >
+        <header style="display: flex;min-height: 70px;justify-content: space-between;background: linear-gradient(to right, #ee7724, #d8363a, #dd3675, #b44593);align-items: center;padding: 10px;">
+            <div class="logo" style="display: flex;align-items: center;">
+                <img  th:src="@{/images/register_logo_1.jpg}" alt="logo" style="height: 50px;margin-right: 10px;border-radius: 15px;">
+                <h3 class="name-company" style="color: aliceblue;">Solidaridad Compartida</h3>
+            </div>
+            <nav>
+                <a href="" class="link"></a>
+                <a href="" class="link"></a>
+                <!--<a href="" class="link"></a>-->
+            </nav>
+        </header>
+        <main >
+
+            <div style="height: 50px; margin: 5%;display: flex;justify-content: center;align-items: center;">
+
+                <a class="btn-a" style="margin-right: 100px;" th:href="@{/admin/listBeneficiary}" >Beneficiarios</a>
+
+                <a class="btn-a" th:href="@{/admin/listDonors}" >Donadores</a>
+
+               
+            </div>
+        </main>
+
+
+
+        <footer class="footer" style="margin-top:28%;" >
+            <div>
+
+                <p class="textFooter">&copy; 2022 Solaridad compartida. </p>
+
+
+            </div>
+
+
+        </footer>
+
+
+
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+                integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+        crossorigin="anonymous"></script>
+    </body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!--< 
+<!DOCTYPE html>
 <html lang="en">
 
     <head>
@@ -201,5 +295,7 @@
 
     </body>
 
-</html>
+</html> 
+</a>-->
+
 
